@@ -13,6 +13,7 @@
  * \section Sec_MigrationXXXXXX Migrating from 100219 to XXXXXX
  *
  * \section Sec_Migration100219 Migrating from 091223 to 100219
+ *    - (None)
  *
  *  <b>Non-USB Library Components</b>
  *    - Due to some ADC channels not being identical to their ADC MUX selection masks for single-ended conversions on some AVR models,
